tests/baselines/reference/amdLikeInputDeclarationEmit.errors.txt
ExtendedClass.js(1,1): error TS18056: Declaration file contains synthesized file reference directives: '"../deps/BaseClass.d.ts"'


==== typing.d.ts (0 errors) ====
    declare function define<T=unknown>(name: string, modules: string[], ready: (...modules: unknown[]) => T);
==== deps/BaseClass.d.ts (0 errors) ====
    declare module "deps/BaseClass" {
        class BaseClass {
            static extends<A>(a: A): new () => A & BaseClass;
        }
        export = BaseClass;
    }
==== ExtendedClass.js (1 errors) ====
    define("lib/ExtendedClass", ["deps/BaseClass"], 
    ~~~~~~
!!! error TS18056: Declaration file contains synthesized file reference directives: '"../deps/BaseClass.d.ts"'
    /**
     * {typeof import("deps/BaseClass")}
     * @param  {typeof import("deps/BaseClass")} BaseClass 
     * @returns 
     */
    (BaseClass) => {    
        
        const ExtendedClass = BaseClass.extends({
            f: function() {
                return "something";
            }
        });
    
        // Exports the module in a way tsc recognize class export 
        const module = {};
        module.exports = ExtendedClass
        return module.exports;
    });